# const-hex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bench.yml  ci.yml
benches/: bench.rs
benches/bench/: data.rs  data_1048576.hex  data_131072.hex  data_16384.hex  data_2048.hex  data_256.hex  data_32.hex  gen_data.py  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_const_hex.rs  fuzz_hex_buffer.rs
src/: aarch64.rs  buffer.rs  display.rs  error.rs  impl_core.rs  lib.rs  output.rs  portable_simd.rs  serde.rs  traits.rs  x86.rs
src/arch/: aarch64.rs  generic.rs  mod.rs  portable_simd.rs  wasm32.rs  x86.rs
tests/: test.rs
