[package]
name = "const-hex"
version = "1.9.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
description = "Fast byte array to hex string conversion"
edition = "2021"
rust-version = "1.64"
license = "MIT OR Apache-2.0"
categories = ["value-formatting", "no-std"]
keywords = ["hex", "bytes", "fmt"]
documentation = "https://docs.rs/const-hex"
homepage = "https://github.com/danipopes/const-hex"
repository = "https://github.com/danipopes/const-hex"
exclude = [".github/", "benches/", "fuzz/", "tests/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1"
hex = { version = "~0.4.2", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
hex = "~0.4.2"
hex-literal = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["hex?/std", "serde?/std", "alloc"]
alloc = ["hex?/alloc", "serde?/alloc"]

# Serde support. Use with `#[serde(with = "const_hex")]`
serde = ["hex?/serde", "dep:serde"]

# Use `hex`'s traits instead of our own.
# This should not be needed most of the time.
hex = ["dep:hex"]

# Forces generic implementation, overriding any specialized implementation (e.g. x86 or aarch64)
force-generic = []

# Support for the `portable-simd` nightly feature.
# Note that `-Zbuild-std` may be necessary to unlock better performance than
# the specialized implementations.
portable-simd = []

# Nightly features for better performance.
nightly = []
